implements layout, header and footer

--- a/packages/probing-frontend/index.html
+++ b/packages/probing-frontend/index.html
@@ -16,7 +16,7 @@
     <link rel="apple-touch-icon" sizes="384x384" href="./icons/icon-384x384.png" />
     <link rel="apple-touch-icon" sizes="512x512" href="./icons/icon-512x512.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Probing | PagoPA</title>
+    <title>🚧 WIP: Monitoraggio e-service | PDND Interoperabilità | PagoPA</title>
   </head>
   <body>
     <noscript>Abilita JavaScript per utilizzare quest'applicazione</noscript>
