--- a/packages/probing-frontend/index.html
+++ b/packages/probing-frontend/index.html
@@ -22,5 +22,13 @@
     <noscript>Abilita JavaScript per utilizzare quest'applicazione</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      var global = global || window;
+      var Buffer = Buffer || [];
+      var process = process || {
+        env: { DEBUG: undefined },
+        version: []
+      };
+    </script>
   </body>
 </html>
