--- a/packages/probing-frontend/index.html
+++ b/packages/probing-frontend/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="it">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -23,12 +23,12 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script>
-      var global = global || window;
-      var Buffer = Buffer || [];
+      var global = global || window
+      var Buffer = Buffer || []
       var process = process || {
         env: { DEBUG: undefined },
-        version: []
-      };
+        version: [],
+      }
     </script>
   </body>
 </html>
